@@ -51,7 +51,7 @@ indexes:
   - name: cc_country
   - name: cc_score
 
-# Used once in query history.
+# Used 2 times in query history.
 - kind: Score
   ancestor: yes
   properties:
@@ -120,7 +120,7 @@ indexes:
   - name: cc_category
   - name: cc_score
 
-# Used 10 times in query history.
+# Used 15 times in query history.
 - kind: Score
   ancestor: yes
   properties:
